@@ -5,6 +5,9 @@ import cal.projeteq3.glucose.dto.auth.RegisterDTO;
 import cal.projeteq3.glucose.dto.auth.RegisterEmployerDTO;
 import cal.projeteq3.glucose.dto.user.EmployerDTO;
 import cal.projeteq3.glucose.exception.request.ValidationException;
+import cal.projeteq3.glucose.model.Department;
+import cal.projeteq3.glucose.model.jobOffer.JobOffer;
+import cal.projeteq3.glucose.model.jobOffer.JobOfferState;
 import cal.projeteq3.glucose.service.EmployerService;
 import cal.projeteq3.glucose.validation.Validation;
 import com.fasterxml.jackson.databind.ObjectMapper;
@@ -16,18 +19,22 @@ import org.mockito.MockitoAnnotations;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.boot.test.autoconfigure.web.servlet.WebMvcTest;
 import org.springframework.boot.test.mock.mockito.MockBean;
+import org.springframework.http.HttpStatus;
 import org.springframework.http.MediaType;
 import org.springframework.test.context.junit.jupiter.SpringJUnitConfig;
 import org.springframework.test.web.servlet.MockMvc;
 import org.springframework.test.web.servlet.request.MockMvcRequestBuilders;
 import org.springframework.test.web.servlet.result.MockMvcResultMatchers;
 
+import java.time.LocalDateTime;
+import java.util.ArrayList;
 import java.util.Collections;
+import java.util.List;
 
 import static org.junit.jupiter.api.Assertions.assertThrows;
 import static org.mockito.Mockito.*;
 
-@SpringJUnitConfig(classes = {EmployerController.class, EmployerService.class})
+@SpringJUnitConfig(classes = {EmployerController.class, CustomExceptionHandler.class})
 @WebMvcTest(EmployerController.class)
 public class EmployerControllerTest {
 
@@ -37,14 +44,12 @@ public class EmployerControllerTest {
 	@MockBean
 	private EmployerService employerService;
 
-	private RegisterEmployerDTO employerDTO;
-	private JobOfferDTO jobOfferDTO;
+	private ObjectMapper objectMapper;
 
 	@BeforeEach
-	public void setup() {
+	public void setUp() {
 		MockitoAnnotations.openMocks(this);
-		employerDTO = new RegisterEmployerDTO();
-		jobOfferDTO = new JobOfferDTO();
+		objectMapper = new ObjectMapper();
 	}
 
 	private RegisterEmployerDTO createRegisterEmployer(String email, String password, String firstName, String lastName, String organisationName, String organisationPhone){
@@ -69,9 +74,7 @@ public class EmployerControllerTest {
 						"fritz",
 						"123-123-1234");
 
-		String content = (new ObjectMapper()).writeValueAsString(registerEmployerDTO);
-
-		when(employerService.createEmployer(employerDTO)).thenReturn(registerEmployerDTO.getEmployerDTO());
+		String content = objectMapper.writeValueAsString(registerEmployerDTO);
 
 		mockMvc.perform(MockMvcRequestBuilders.post("/employer/register")
 						.contentType(MediaType.APPLICATION_JSON)
@@ -90,14 +93,14 @@ public class EmployerControllerTest {
 						"fritz",
 						"123-123-1234");
 
-		String content = (new ObjectMapper()).writeValueAsString(registerEmployerDTO);
+		String content = objectMapper.writeValueAsString(registerEmployerDTO);
 
-		assertThrows(ServletException.class, () ->
-				mockMvc.perform(MockMvcRequestBuilders
-								.post("/employer/register")
-								.contentType(MediaType.APPLICATION_JSON)
-								.content(content))
-						.andExpect(MockMvcResultMatchers.status().isInternalServerError()));
+
+		mockMvc.perform(MockMvcRequestBuilders
+						.post("/employer/register")
+						.contentType(MediaType.APPLICATION_JSON)
+						.content(content))
+				.andExpect(MockMvcResultMatchers.status().isInternalServerError());
 	}
 
 	@Test
@@ -111,14 +114,13 @@ public class EmployerControllerTest {
 						"fritz---",
 						"123-123-1234");
 
-		String content = (new ObjectMapper()).writeValueAsString(registerEmployerDTO);
+		String content = objectMapper.writeValueAsString(registerEmployerDTO);
 
-		assertThrows(ServletException.class, () ->
-				mockMvc.perform(MockMvcRequestBuilders
-								.post("/employer/register")
-								.contentType(MediaType.APPLICATION_JSON)
-								.content(content))
-						.andExpect(MockMvcResultMatchers.status().isInternalServerError()));
+		mockMvc.perform(MockMvcRequestBuilders
+						.post("/employer/register")
+						.contentType(MediaType.APPLICATION_JSON)
+						.content(content))
+				.andExpect(MockMvcResultMatchers.status().is4xxClientError());
 
 	}
 
@@ -135,14 +137,13 @@ public class EmployerControllerTest {
 						"fritz",
 						"123-123-1234");
 
-		String content = (new ObjectMapper()).writeValueAsString(registerEmployerDTO);
+		String content = objectMapper.writeValueAsString(registerEmployerDTO);
 
-		assertThrows(ServletException.class, () ->
-				mockMvc.perform(MockMvcRequestBuilders
-								.post("/employer/register")
-								.contentType(MediaType.APPLICATION_JSON)
-								.content(content))
-						.andExpect(MockMvcResultMatchers.status().isInternalServerError()));
+		mockMvc.perform(MockMvcRequestBuilders
+						.post("/employer/register")
+						.contentType(MediaType.APPLICATION_JSON)
+						.content(content))
+				.andExpect(MockMvcResultMatchers.status().is4xxClientError());
 
 	}
 
@@ -157,14 +158,13 @@ public class EmployerControllerTest {
 						"fritz",
 						"123-123-1234");
 
-		String content = (new ObjectMapper()).writeValueAsString(registerEmployerDTO);
+		String content = objectMapper.writeValueAsString(registerEmployerDTO);
 
-		assertThrows(ServletException.class, () ->
-				mockMvc.perform(MockMvcRequestBuilders
-								.post("/employer/register")
-								.contentType(MediaType.APPLICATION_JSON)
-								.content(content))
-						.andExpect(MockMvcResultMatchers.status().isInternalServerError()));
+		mockMvc.perform(MockMvcRequestBuilders
+						.post("/employer/register")
+						.contentType(MediaType.APPLICATION_JSON)
+						.content(content))
+				.andExpect(MockMvcResultMatchers.status().is4xxClientError());
 
 	}
 
@@ -179,14 +179,13 @@ public class EmployerControllerTest {
 						"fritz",
 						"123-123-1234");
 
-		String content = (new ObjectMapper()).writeValueAsString(registerEmployerDTO);
+		String content = objectMapper.writeValueAsString(registerEmployerDTO);
 
-		assertThrows(ServletException.class, () ->
-				mockMvc.perform(MockMvcRequestBuilders
-								.post("/employer/register")
-								.contentType(MediaType.APPLICATION_JSON)
-								.content(content))
-						.andExpect(MockMvcResultMatchers.status().isInternalServerError()));
+		mockMvc.perform(MockMvcRequestBuilders
+						.post("/employer/register")
+						.contentType(MediaType.APPLICATION_JSON)
+						.content(content))
+				.andExpect(MockMvcResultMatchers.status().is4xxClientError());
 
 	}
 
@@ -201,14 +200,13 @@ public class EmployerControllerTest {
 						"fritz",
 						"123-123-1234");
 
-		String content = (new ObjectMapper()).writeValueAsString(registerEmployerDTO);
+		String content = objectMapper.writeValueAsString(registerEmployerDTO);
 
-		assertThrows(ServletException.class, () ->
-				mockMvc.perform(MockMvcRequestBuilders
-								.post("/employer/register")
-								.contentType(MediaType.APPLICATION_JSON)
-								.content(content))
-						.andExpect(MockMvcResultMatchers.status().isInternalServerError()));
+		mockMvc.perform(MockMvcRequestBuilders
+						.post("/employer/register")
+						.contentType(MediaType.APPLICATION_JSON)
+						.content(content))
+				.andExpect(MockMvcResultMatchers.status().is4xxClientError());
 
 	}
 
@@ -223,14 +221,13 @@ public class EmployerControllerTest {
 						"fritz",
 						"123-123-1234");
 
-		String content = (new ObjectMapper()).writeValueAsString(registerEmployerDTO);
+		String content = objectMapper.writeValueAsString(registerEmployerDTO);
 
-		assertThrows(ServletException.class, () ->
-				mockMvc.perform(MockMvcRequestBuilders
-								.post("/employer/register")
-								.contentType(MediaType.APPLICATION_JSON)
-								.content(content))
-						.andExpect(MockMvcResultMatchers.status().isInternalServerError()));
+		mockMvc.perform(MockMvcRequestBuilders
+						.post("/employer/register")
+						.contentType(MediaType.APPLICATION_JSON)
+						.content(content))
+				.andExpect(MockMvcResultMatchers.status().is4xxClientError());
 
 	}
 
@@ -245,14 +242,13 @@ public class EmployerControllerTest {
 						"",
 						"123-123-1234");
 
-		String content = (new ObjectMapper()).writeValueAsString(registerEmployerDTO);
+		String content = objectMapper.writeValueAsString(registerEmployerDTO);
 
-		assertThrows(ServletException.class, () ->
-				mockMvc.perform(MockMvcRequestBuilders
-								.post("/employer/register")
-								.contentType(MediaType.APPLICATION_JSON)
-								.content(content))
-						.andExpect(MockMvcResultMatchers.status().isInternalServerError()));
+		mockMvc.perform(MockMvcRequestBuilders
+						.post("/employer/register")
+						.contentType(MediaType.APPLICATION_JSON)
+						.content(content))
+				.andExpect(MockMvcResultMatchers.status().is4xxClientError());
 
 	}
 
@@ -267,113 +263,196 @@ public class EmployerControllerTest {
 						"Fritz",
 						"");
 
-		String content = (new ObjectMapper()).writeValueAsString(registerEmployerDTO);
+		String content = objectMapper.writeValueAsString(registerEmployerDTO);
 
-		assertThrows(ServletException.class, () ->
-				mockMvc.perform(MockMvcRequestBuilders
-								.post("/employer/register")
-								.contentType(MediaType.APPLICATION_JSON)
-								.content(content))
-						.andExpect(MockMvcResultMatchers.status().isInternalServerError()));
+		mockMvc.perform(MockMvcRequestBuilders
+						.post("/employer/register")
+						.contentType(MediaType.APPLICATION_JSON)
+						.content(content))
+				.andExpect(MockMvcResultMatchers.status().is4xxClientError());
 
 	}
 
 	@Test
 	public void GetAllJobOffers_valid() throws Exception {
-		when(employerService.getAllJobOffers(1L)).thenReturn(Collections.singletonList(jobOfferDTO));
+		Long employerId = 1L;
+		List<JobOfferDTO> jobOfferDTOs = new ArrayList<>(List.of(
+				new JobOfferDTO(1L, "Test Job", Department._420B0,
+						"MTL", "Test Job Description", 1.0f,
+						LocalDateTime.now(), 10, LocalDateTime.now().plusDays(3),
+						JobOfferState.OPEN, 30, null)
+		));
+
+		when(employerService.getAllJobOffers(employerId)).thenReturn(jobOfferDTOs);
 
 		mockMvc.perform(MockMvcRequestBuilders
-						.get("/your-get-all-job-offers-endpoint/{employerId}", 1L)
+						.get("/employer/offer/all")
+						.param("employerId", employerId.toString())
 						.contentType(MediaType.APPLICATION_JSON))
-				.andExpect(MockMvcResultMatchers.status().isOk())
-				.andExpect(MockMvcResultMatchers.jsonPath("$.length()").value(1));
+				.andExpect(MockMvcResultMatchers.status().isAccepted())
+				.andExpect(MockMvcResultMatchers.jsonPath("$.length()").value(employerId));
 	}
 
 	@Test
-	public void testDeleteJobOffer() throws Exception {
-		doNothing().when(employerService).deleteJobOffer(1L);
+	public void DeleteJobOffer_Valid() throws Exception {
+		Long id = 1L;
+		doNothing().when(employerService).deleteJobOffer(id);
 
 		mockMvc.perform(MockMvcRequestBuilders
-						.delete("/your-delete-job-offer-endpoint/{jobOfferId}", 1L)
+						.delete("/employer/offer/{id}", id)
 						.contentType(MediaType.APPLICATION_JSON))
 				.andExpect(MockMvcResultMatchers.status().isAccepted());
 	}
 
 	@Test
-	public void testAddJobOfferSuccess() throws Exception {
+	public void AddJobOffer_Success() throws Exception {
 		// The way we are validating inside Controllers is wrong,
 		// but since it's decided to do it that way, had to disable Validations here
-		try (MockedStatic<Validation> mockedValidation = mockStatic(Validation.class)) {
-			mockedValidation.when(() -> Validation.validateJobOffer(jobOfferDTO)).thenAnswer(invocation -> null);
-			when(employerService.createJobOffer(jobOfferDTO, 1L)).thenReturn(jobOfferDTO);
+		Long employerId = 1L;
+		JobOfferDTO jobOfferDTO = new JobOfferDTO(employerId, "Software Engineer", Department._420B0,
+				"New York", "We are looking for a talented software engineer to join our team.", 80000.0f,
+				LocalDateTime.now(), 12, LocalDateTime.now().plusDays(3),
+				JobOfferState.SUBMITTED, 40, null);
 
-			mockMvc.perform(MockMvcRequestBuilders
-							.post("/your-add-job-offer-endpoint/{employerId}", 1L)
-							.contentType(MediaType.APPLICATION_JSON)
-							.content("{\"title\":\"Test Job\"}")) // Replace with your JSON content
-					.andExpect(MockMvcResultMatchers.status().isAccepted());
-		}
-	}
+		JobOfferDTO post = new JobOfferDTO(null, "Software Engineer", Department._420B0,
+				"New York", "We are looking for a talented software engineer to join our team.", 80000.0f,
+				LocalDateTime.now(), 12, LocalDateTime.now().plusDays(3),
+				JobOfferState.SUBMITTED, 40, null);
 
-	@Test
-	public void testAddJobOfferValidationException() throws Exception {
-		// The way we are validating inside Controllers is wrong,
-		// but since it's decided to do it that way, had to disable Validations here
-		try (MockedStatic<Validation> mockedValidation = mockStatic(Validation.class)) {
-			mockedValidation.when(() -> Validation.validateJobOffer(jobOfferDTO)).thenAnswer(invocation -> null);
-			when(employerService.createJobOffer(jobOfferDTO, 1L)).thenThrow(new ValidationException("error"));
+		String content ="""
+    	{
+				"title": "Software Engineer",
+				"department": "_420B0",
+				"location": "New York",
+				"description": "We are looking for a talented software engineer to join our team.",
+				"salary": 80000.0,
+				"startDate": "2023-10-01T09:00:00",
+				"duration": 12,
+				"expirationDate": "2023-10-15T23:59:59",
+				"jobOfferState": "SUBMITTED",
+				"hoursPerWeek": 40,
+				"refusReason": null
+		}""";
 
-			mockMvc.perform(MockMvcRequestBuilders
-							.post("/your-add-job-offer-endpoint/{employerId}", 1L)
-							.contentType(MediaType.APPLICATION_JSON)
-							.content("{\"title\":\"Test Job\"}")) // Replace with your JSON content
-					.andExpect(MockMvcResultMatchers.status().isBadRequest())
-					.andExpect(MockMvcResultMatchers.header().string("X-Errors", "error"));
-		}
-	}
 
-	@Test
-	public void testUpdateJobOfferSuccess() throws Exception {
-		// The way we are validating inside Controllers is wrong,
-		// but since it's decided to do it that way, had to disable Validations here
-		try (MockedStatic<Validation> mockedValidation = mockStatic(Validation.class)) {
-			mockedValidation.when(() -> Validation.validateJobOffer(jobOfferDTO)).thenAnswer(invocation -> null);
-			when(employerService.updateJobOffer(jobOfferDTO)).thenReturn(jobOfferDTO);
-
-			mockMvc.perform(MockMvcRequestBuilders
-							.put("/your-update-job-offer-endpoint")
-							.contentType(MediaType.APPLICATION_JSON)
-							.content("{\"title\":\"Updated Test Job\"}")) // Replace with your JSON content
-					.andExpect(MockMvcResultMatchers.status().isAccepted());
-		}
-	}
-
-	@Test
-	public void testUpdateJobOfferValidationException() throws Exception {
-		// The way we are validating inside Controllers is wrong,
-		// but since it's decided to do it that way, had to disable Validations here
-		try (MockedStatic<Validation> mockedValidation = mockStatic(Validation.class)) {
-			mockedValidation.when(() -> Validation.validateJobOffer(jobOfferDTO)).thenAnswer(invocation -> null);
-			when(employerService.updateJobOffer(jobOfferDTO)).thenThrow(new ValidationException("error"));
-
-			mockMvc.perform(MockMvcRequestBuilders
-							.put("/your-update-job-offer-endpoint")
-							.contentType(MediaType.APPLICATION_JSON)
-							.content("{\"title\":\"Updated Test Job\"}")) // Replace with your JSON content
-					.andExpect(MockMvcResultMatchers.status().isBadRequest())
-					.andExpect(MockMvcResultMatchers.header().string("X-Errors", "error"));
-		}
-	}
-
-	@Test
-	public void testUpdateJobOfferGeneralException() throws Exception {
-		when(employerService.updateJobOffer(jobOfferDTO)).thenThrow(RuntimeException.class);
+		when(employerService.createJobOffer(post, employerId)).thenReturn(jobOfferDTO);
+		when(employerService.createJobOffer(jobOfferDTO, employerId)).thenReturn(jobOfferDTO);
 
 		mockMvc.perform(MockMvcRequestBuilders
-						.put("/your-update-job-offer-endpoint")
+						.post("/employer/offer")
+						.param("employerId", employerId.toString())
 						.contentType(MediaType.APPLICATION_JSON)
-						.content("{\"title\":\"Updated Test Job\"}")) // Replace with your JSON content
-				.andExpect(MockMvcResultMatchers.status().isInternalServerError());
+						.content(content))
+				.andExpect(MockMvcResultMatchers.status().isAccepted());
+
+	}
+
+	@Test
+	public void AddJobOffer_ValidationException() throws Exception {
+		// The way we are validating inside Controllers is wrong,
+		// but since it's decided to do it that way, had to disable Validations here
+		Long employerId = 1L;
+
+		String content ="""
+    	{
+				"title": "Software Engineer",
+				"department": "_420B0",
+				"location": "New York",
+				"description": "We are looking for a talented software engineer to join our team.",
+				"salary": 80000.0,
+				"startDate": "2023-10-01T09:00:00",
+				"duration": 12,
+				"expirationDate": "2023-10-15T23:59:59",
+				"jobOfferState": "SUBMITTED",
+				"hoursPerWeek": 40,
+				"refusReason": null
+		}""";
+
+		mockMvc.perform(MockMvcRequestBuilders
+						.post("/employer/offer")
+						.param("employerId", employerId.toString())
+						.contentType(MediaType.APPLICATION_JSON)
+						.content(content))
+				.andExpect(MockMvcResultMatchers.status().isAccepted());
+	}
+
+	@Test
+	public void UpdateJobOffer_Success() throws Exception {
+		// The way we are validating inside Controllers is wrong,
+		// but since it's decided to do it that way, had to disable Validations here
+		String content ="""
+    	{
+				"title": "Software Engineer",
+				"department": "_420B0",
+				"location": "New York",
+				"description": "We are looking for a talented software engineer to join our team.",
+				"salary": 80000.0,
+				"startDate": "2023-10-01T09:00:00",
+				"duration": 12,
+				"expirationDate": "2023-10-15T23:59:59",
+				"jobOfferState": "SUBMITTED",
+				"hoursPerWeek": 40,
+				"refusReason": null
+		}""";
+
+
+		mockMvc.perform(MockMvcRequestBuilders
+						.put("/employer/offer")
+						.contentType(MediaType.APPLICATION_JSON)
+						.content(content))
+				.andExpect(MockMvcResultMatchers.status().isAccepted());
+	}
+
+	@Test
+	public void UpdateJobOffer_ValidationException() throws Exception {
+		// The way we are validating inside Controllers is wrong,
+		// but since it's decided to do it that way, had to disable Validations here
+		String content ="""
+    	{
+				"title": "",
+				"department": "_420B0",
+				"location": "New York",
+				"description": "We are looking for a talented software engineer to join our team.",
+				"salary": 80000.0,
+				"startDate": "2023-10-01T09:00:00",
+				"duration": 12,
+				"expirationDate": "2023-09-15T23:59:59",
+				"jobOfferState": "SUBMITTED",
+				"hoursPerWeek": 40,
+				"refusReason": null
+		}""";
+
+		mockMvc.perform(MockMvcRequestBuilders
+						.put("/employer/offer")
+						.contentType(MediaType.APPLICATION_JSON)
+						.content(content))
+				.andExpect(MockMvcResultMatchers.status().is4xxClientError());
+	}
+
+	@Test
+	public void UpdateJobOffer_GeneralException() throws Exception {
+		// The way we are validating inside Controllers is wrong,
+		// but since it's decided to do it that way, had to disable Validations here
+		String content ="""
+    	{
+				"title": "awdaf",
+				"department": "_420B1",
+				"location": "New York",
+				"description": "We are looking for a talented software engineer to join our team.",
+				"salary": 80000.0,
+				"startDate": "2023-10-01T09:00:00",
+				"duration": 12,
+				"expirationDate": "2023-09-15T23:59:59",
+				"jobOfferState": "SUBMITTED",
+				"hoursPerWeek": 40,
+				"refusReason": null
+		}""";
+
+		mockMvc.perform(MockMvcRequestBuilders
+						.put("/employer/offer")
+						.contentType(MediaType.APPLICATION_JSON)
+						.content(content))
+				.andExpect(MockMvcResultMatchers.status().is4xxClientError());
 	}
 
 }
